#[project]
#name = "marketplace"
#version = "0.1.0"
#description = ""
#authors = [
#    {name = "Your Name",email = "you@example.com"}
#]
#readme = "README.md"
#requires-python = ">=3.9"
#dependencies = [
#    "uvicorn (>=0.34.2,<0.35.0)",
#    "fastapi (>=0.115.12,<0.116.0)",
#    "sqlalchemy (>=2.0.41,<3.0.0)",
#    "alembic (>=1.15.2,<2.0.0)",
#    "pydantic-settings (>=2.9.1,<3.0.0)",
#    "pydantic (>=2.11.4,<3.0.0)",
#    "psycopg2 (>=2.9.10,<3.0.0)",
#    "psycopg (>=3.2.9,<4.0.0)",
#    "greenlet (>=3.2.2,<4.0.0)"
#]
#
#
#[build-system]
#requires = ["poetry-core>=2.0.0,<3.0.0"]
#build-backend = "poetry.core.masonry.api"
#
#
#[tool.poetry]
#name = "marketplace"
#version = "0.1.0"
#description = "My project description"
#authors = ["Ilya Mashukov <ilya@example.com>"]
#
#
#[tool.poetry-dynamic-versioning]
#enable = false

[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = "My project description"
authors = ["Ilya Mashukov <ilya@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
uvicorn = ">=0.34.2,<0.35.0"
fastapi = ">=0.115.12,<0.116.0"
sqlalchemy = ">=2.0.41,<3.0.0"
alembic = ">=1.15.2,<2.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
pydantic = ">=2.11.4,<3.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
psycopg = ">=3.2.9,<4.0.0"
greenlet = ">=3.2.2,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
